2007-01-24  Alexander Barth  <abarth@marine.usf.edu>

	* misc/f77-fcn.h (F77_CSTRING): Call OCTAVE_LOCAL_BUFFER with cs,
	not F77_CHAR_ARG_USE (s).

2006-11-11  John W. Eaton  <jwe@octave.org>

	* Makerules.in (%.def : %.f): Use $(simple-move-if-change-rule) here.

2006-11-03  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DLL_CXXDEFS): Rename from XTRA_CXXDEFS.
	(DLL_CDEFS): Rename from XTRA_CDEFS.
	Substitute CRUFT_DLL_DEFS, not XTRA_CRUFT_DEFS.
	(XTRA_CRUFT_SH_LDFLAGS): Rename from XTRA_CRUFT_LINK_DEPS.
	Add $(XTRA_CRUFT_SH_LDFLAGS) to SH_LDFLAGS instead of to LINK_DEPS.

2006-10-31  John W. Eaton  <jwe@octave.org>

	* misc/Makefile.in (INCLUDES): Add oct-dlldefs.h to the list.

2006-10-29  John W. Eaton  <jwe@octave.org>

	* misc/Makefile.in (SPECIAL_INCLUDE): Add oct-dlldefs.h to the list.

2006-10-28  Michael Goffioul  <michael.goffioul@swing.be>

	* misc/quit.h: Undefine min and max after including windows.h.

2006-10-27  John W. Eaton  <jwe@octave.org>

	* misc/oct-dlldefs.h: New file.

	* mkf77def.in: Downcase all input to simplify matching.
	Match only lines beginning with whitespace.
	Match function return types.
	Use literal TAB characters instead of \t in sed patterns.
	From Michael Goffioul <michael.goffioul@swing.be>.

2006-10-26  Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in (XTRA_CRUFT_LINK_DEPS): Substitute.
	(CRUFT_DEFS): New variable.
	(LINK_DEPS): Include $(XTRA_CRUFT_LINK_DEPS) in the list.
	(clean, mostlyclean, distclean): Delete cruft.def.
	(cruft.def): New target.
	(libraries): Depend on cruft.def.

	* misc/f77-fcn.h (f77_exception_encountered, xstopx):
	Tag with CRUFT_API.
	* misc/lo-error.h (current_liboctave_error_handler,
	current_liboctave_warning_handler,
	current_liboctave_warning_with_id_handler,
	set_liboctave_error_handler, set_liboctave_warning_handler,
	set_liboctave_warning_with_id_handler): Likewise.
	* misc/quit.h (w32_sigint_init, w32_raise_final,
	w32_raise, w32_in_main_thread, current_context,